# alloyagent

./: .gitignore  README.md
AlloyStack/: .gitignore  README.md  justfile
AlloyStack/baseline/data_read_write/: .dockerignore  Dockerfile  client.py  data-rw-rust.yml
AlloyStack/baseline/data_read_write/data-rw-rust/: Cargo.toml
AlloyStack/baseline/long_chain/: client.py  long-chain-rust-k8s.yml  long-chain-rust.yml
AlloyStack/baseline/long_chain/long-chain-rust/: Cargo.toml
AlloyStack/baseline/map_reduce_rust_openfaas/: minio.yaml  redis.yaml
AlloyStack/baseline/parallel_sort/: comp_avea.sh
AlloyStack/doc/: content_included_in_justfile.md  testing_a_workflow.md
AlloyStack/isol_config/: map_reduce_large_c5.json
alloyfang/: .gitignore  Cargo.toml  README.md
alloyfang/benches/: agent_loop.rs  cold_start.rs  memory_usage.rs  parallel_execution.rs  reference_passing.rs  tool_execution.rs
alloyfang/reports/: benchmark_raw.txt  performance_report.md
alloyfang/scripts/: generate_report.py  run_all_benchmarks.sh
alloyfang/src/: config.rs  lib.rs  mock_llm.rs  mock_tools.rs
docs/: ALLOYSTACK_ZEROCLAW_ANALYSIS.md
docs/plans/: 2026-03-13-git-repo-config-design.md
openfang/: Cargo.toml
openfang/crates/openfang-api/src/: middleware.rs
openfang/crates/openfang-channels/: Cargo.toml
openfang/crates/openfang-extensions/src/: oauth.rs  vault.rs
openfang/crates/openfang-kernel/src/: cron.rs  scheduler.rs
openfang/crates/openfang-runtime/: Cargo.toml
openfang/crates/openfang-runtime/src/: kernel_handle.rs  lib.rs  (+1 more)
scripts/: run_benchmarks.sh
(+8 files in other folders)
